--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
 
 /* Your CSS Code here. */
 .holder {
-	width: 100vh;
-	height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center; 
+  align-items: center;     
 }
+
 .item-1 {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100px;
-	height: 100px;
-	background-color: red;
+  width: 100px;
+  height: 100px;
+  background-color: red;
 }
